Category Pages Added

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
+    background: url(../img/intro-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -575,4 +575,8 @@ fieldset[disabled] .btn-xl.active {
     border: 1px solid white;
     cursor:pointer;
     overflow: hidden;
+}
+
+.item{
+    border:none;
 }
