--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,11 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
     background-size: cover;
 }
-
+.img{
+  background: url(../img/intro-bg.jpg) no-repeat center center;
+}
 .intro-message {
     position: relative;
     padding-top: 20%;
