--- a/css/style.css
+++ b/css/style.css
@@ -1051,18 +1051,45 @@ h4.great {
   background: #2980b9;
 }
 
-.content-section {
-    padding-top: 100px;
+.site-heading
+{
+  padding: 100px 0 50px;
+  color: white;
+}
+@media only screen and (min-width: 768px) {
+.site-heading
+{
+    padding: 150px 0;
+  }
+}
+.site-heading
+{
+  text-align: center;
+}
+.site-heading h1
+{
+  margin-top: 0;
+  font-size: 50px;
+}
+.site-heading .subheading
+{
+  font-size: 24px;
+  line-height: 1.1;
+  display: block;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  margin: 10px 0 0;
+}
+@media only screen and (min-width: 768px) {
+.site-heading h1,
+.page-heading h1 {
+    font-size: 80px;
+  }
 }
 
-.download-section {
-    width: 100%;
-    padding: 50px 0;
-    color: #fff;
-    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+.btn-product{
+  width: 100%;
+  background-color: white;
+  border-color: black;
+  color: black;
 }
