--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,12 @@ h6 {
     background: url(../img/intro-bg.jpg) no-repeat center center;
     background-size: cover;
 }
+.intro-header1 {
+    padding-top: 50px; 
+    padding-bottom: 50px;
+    text-align: center;
+    color: #f8f8f8;
+}
 .img{
   background: url(../img/intro-bg.jpg) no-repeat center center;
 }
