--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
+    background-size: cover;
 }
 .img{
   background: url(../img/intro-bg.jpg) no-repeat center center;
@@ -126,23 +127,9 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/3D.jpg) no-repeat center center;
     background-size: cover;
-}
-
-.banner h2 {
-    margin: 0;
-    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 3em;
-}
-
-.banner ul {
-    margin-bottom: 0;
-}
-
-.banner-social-buttons {
-    float: right;
-    margin-top: 0;
+    height:430px;
 }
 
 @media(max-width:1199px) {
@@ -1077,6 +1064,11 @@ h4.great {
   margin-top: 0;
   font-size: 50px;
 }
+.site-heading h2
+{
+  margin-top: 0;
+  font-size: 40px;
+}
 .site-heading .subheading
 {
   font-size: 24px;
@@ -1090,6 +1082,10 @@ h4.great {
 .site-heading h1,
 .page-heading h1 {
     font-size: 80px;
+  }
+  .site-heading h2,
+.page-heading h2 {
+    font-size: 70px;
   }
 }
 
@@ -1185,3 +1181,15 @@ h4.great {
     text-align: center;
   }
 }  
+
+.download-section {
+    width: 100%;
+    padding: 50px 0;
+    color: #fff;
+    background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+    background-color: #000;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
