--- a/css/style3.css
+++ b/css/style3.css
@@ -44,3 +44,16 @@
     background: rgba(255,255,255,0.9);
 }
 
+.header2{
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(../img/landing-header.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    padding: 250px 0;
+}
+
