--- a/css/style1.css
+++ b/css/style1.css
@@ -12,7 +12,7 @@ header {
   color: white;
 }
 hr {
-  border-color: #f05f40;
+  border-color: #36566F;
   border-width: 3px;
   max-width: 50px;
 }
