--- a/css/style3.css
+++ b/css/style3.css
@@ -57,3 +57,10 @@
     padding: 250px 0;
 }
 
+.disabled{
+    cursor: not-allowed;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  opacity: .65;
+}
