--- a/css/style.css
+++ b/css/style.css
@@ -1319,3 +1319,81 @@ h4.great {
   transform: scale(1);
   background-color: rgba(0,0,0,0.4);
 }
+.widget {
+  margin-bottom: 60px;
+  padding-left: 0;
+}
+.mega-dropdown {
+  position: static; !important;
+}
+.mega-dropdown-menu {
+    padding: 20px 0px;
+    min-width: 100%;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+}
+.mega-dropdown-menu > li > ul {
+  padding: 0;
+  margin: 0;
+}
+.mega-dropdown-menu > li > ul > li {
+  list-style: none;
+}
+.mega-dropdown-menu > li > ul > li > a {
+  display: block;
+  color: #222;
+  padding: 3px 5px;
+}
+.mega-dropdown-menu > li ul > li > a:hover,
+.mega-dropdown-menu > li ul > li > a:focus {
+  text-decoration: none;
+}
+.mega-dropdown-menu .dropdown-header {
+  font-size: 18px;
+  color: black;
+  padding: 5px 60px 5px 5px;
+  line-height: 30px;
+}
+.dropdown-menu {
+    min-width: 250px;
+  }
+  .dropdown-menu.columns-2 {
+    min-width: 500px;
+  }
+  .dropdown-menu.columns-3 {
+    min-width: 750px;
+  }
+  .dropdown-menu li a {
+    padding: 5px 15px;
+    font-weight: 300;
+  }
+  .multi-column-dropdown {
+    list-style: none;
+  }
+  .multi-column-dropdown li a {
+    display: block;
+    clear: both;
+    line-height: 1.428571429;
+    color: #333;
+    white-space: normal;
+  }
+  .multi-column-dropdown li a:hover {
+    text-decoration: none;
+    color: #262626;
+    background-color: #f5f5f5;
+  }
+  
+  @media (max-width: 767px) {
+    .dropdown-menu.multi-column {
+      min-width: 240px !important;
+      overflow-x: hidden;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .content {
+      width: 90%;
+      margin: 50px auto;
+      padding: 10px;
+    }
+  }
