--- a/css/style3.css
+++ b/css/style3.css
@@ -56,6 +56,19 @@
     -o-background-size: cover;
     padding: 250px 0;
 }
+.header3{
+    display: table;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url(https://static1.sw-cdn.net/files/cms/landing-pages/landing-header-bg-edu-2.jpg) no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    padding: 250px 0;
+}
+
 
 .disabled{
     cursor: not-allowed;
