--- a/css/style1.css
+++ b/css/style1.css
@@ -402,5 +402,5 @@ section.success a.active {
     background-color: #f7f7f7;
 }
 .bg-darkest-gray {
-    background-color: #999999;
+    background-color: #f2f2f2;
 }
